--- a/docs/knowledge-base/yhma-api/master-v1.0.0/info.yml
+++ b/docs/knowledge-base/yhma-api/master-v1.0.0/info.yml
@@ -2,8 +2,9 @@ moduleName: yhma-api
 versionName: master-v1.0.0
 patchNotes: |
   version: 1.0.0
-    date: 2024-06-28
+    date: 2024-07-09
     description: Initial version
 
   + inbody 관련 API 변경됨
   + hiCardi 관련 API 추가됨
+  + patLogin 관련 API 추가됨
